# bosk

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  .pylintrc  .readthedocs.yml  LICENSE.md  MANIFEST.in  README.md  README_EN.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  simple.py
.github/workflows/: static.yml
bosk/: __init__.py  data.py  exceptions.py  slot.py  stages.py  state.py  utility.py
bosk/auto/: __init__.py  builders.py  deep_forest.py  growing_strategies.py  layers.py  metrics.py  validation.py
bosk/block/: __init__.py  auto.py  base.py  eager.py  functional.py  meta.py  placeholder.py  slot.py
bosk/comparison/: __init__.py  base.py  cross_val.py  metric.py
bosk/example/: deep_forest_cs.py
bosk/executor/: __init__.py  base.py  block.py  descriptor.py  handlers.py  naive.py  painter.py  recursive.py  sklearn_interface.py  timer.py  topological.py  utility.py
bosk/painter/: __init__.py  base.py  graphviz.py  topological.py
bosk/pipeline/: __init__.py  auto_enlarge.py  base.py  connection.py  dynamic.py
bosk/visitor/: __init__.py  base.py  group.py
docs/: Makefile  advanced_api.rst  api.rst  architectures.rst  conf.py  contribution.rst  en_index.rst  examples.rst  getting_started.rst  index.rst  install.rst  make_api.py  make_module_list.py  requirements.txt  ru_advanced_api.rst  ru_architectures.rst  ru_autoapi_index.rst  ru_basic_examples.rst  ru_contribution.rst  ru_examples.rst  ru_getting_started.rst  ru_install.rst  user_guide.rst
tests/: pipeline_getter.py  pipelines.py  test_pipelines.py  utility.py
(+525 files in other folders)
